# OpenAI-Agent-SDK

./: README.md
Neura/: README.md  agent_setup.py  main.py  requirements.txt  tools.py
Step_02_Agents/: README.md
Step_02_OpenRouter/: .env  agent.py  main.py  pyproject.toml
Step_03_LiteLLM/: agent_setup.py  main.py  pyproject.toml
Step_03_LiteLLM/src/step_03_litellm/: __init__.py
Step_03_Tool/: README.md  Tools.ipynb
Step_04_hello_agent/Run_level/: main.py
Step_04_hello_agent/agent_level/: main.py
Step_04_hello_agent/async/: main.py  pyproject.toml
Step_04_hello_agent/global-level/: main.py  pyproject.toml
Step_04_hello_agent/sync/: main.py  pyproject.toml
Step_07_Streaming/streaming/: main.py  pyproject.toml
Step_08_Tools/: .env  agent_setup.py  main.py  pyproject.toml  tools.py
Step_09_Agent_as_tool/: agent_setup.py  main.py  pyproject.toml
Step_10_Context/: config.py  instruction.py  main.py  pyproject.toml
chainlit-hello/: .env  hello.py  pyproject.toml
project1/: .env  .huggingface.yaml  Dockerfile  README.md  agent_setup.py  main.py  pyproject.toml  requirements.txt  tools.py
